--- a/vignettes/classify_dwr_pubs.Rmd
+++ b/vignettes/classify_dwr_pubs.Rmd
@@ -15,8 +15,7 @@ out.width = "100%",
 comment = "#>"
 )
 
-# library(pubclassify)
-devtools::load_all()
+library(pubclassify)
 ```
 
 # Introduction
